Fixing align
 - fixin align

--- a/client/app/site/partneraccounts/login/login.less
+++ b/client/app/site/partneraccounts/login/login.less
@@ -56,11 +56,17 @@
 		}
 		.login-form{
 			margin-bottom: 60px;
-			.inputminimal{
+			.input-container{
 				margin-left: auto;
 				margin-right: auto;
-
+				display: inline-block;
+				&>p{
+					text-align: left;
+				}
+			}
+			.inputminimal{
 				background: #f7f7f7;
+				margin-bottom: 10px;
 			}
 		}
 	}
